<resources>
    <string name="app_name">Budget Tracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for controls/labels-->
    <string name="addBudget">Add Budget</string>
    <string name="budgets">Budgets</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="budget">Budget</string>
    <string name="income">Income</string>
    <string name="remaining">Remaining</string>
    <string name="remainingWithColon">Remaining:</string>
    <string name="addExpense">Add Expense</string>
    <string name="cost">Cost</string>
    <string name="delete">Delete</string>
</resources>