<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtAddBudget"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="250dp"
        android:text="@string/addBudget"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ptBudgetName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toEndOf="@+id/ptBudgetName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ptBudgetName"
        android:layout_width="258dp"
        android:layout_height="41dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/ptBudget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddBudget"
        android:inputType="text"
        android:autofillHints="Name"/>

    <EditText
        android:id="@+id/ptBudget"
        android:layout_width="258dp"
        android:layout_height="41dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/budget"
        app:layout_constraintBottom_toTopOf="@+id/ptIncome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptBudgetName"
        android:inputType="numberDecimal"
        android:autofillHints="Budget" />

    <EditText
        android:id="@+id/ptIncome"
        android:layout_width="258dp"
        android:layout_height="41dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/income"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/spTimeInterval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptBudget"
        android:autofillHints="Income" />

    <Spinner
        android:id="@+id/spTimeInterval"
        android:layout_width="258dp"
        android:layout_height="41dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="167dp"
        android:entries="@array/timeIntervals"
        app:layout_constraintBottom_toTopOf="@+id/btnDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptIncome" />

</androidx.constraintlayout.widget.ConstraintLayout>