<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtBudgetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="10dp"
        android:text="@string/budget"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtAmountRemaining"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAmountRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="8dp"
        android:text="@string/remaining"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spTimeInterval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/txtAmtRemaining"
        app:layout_constraintTop_toBottomOf="@+id/txtBudgetName" />

    <TextView
        android:id="@+id/txtAmtRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="8dp"
        android:text="@string/remainingWithColon"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spTimeInterval"
        app:layout_constraintEnd_toStartOf="@+id/txtAmountRemaining"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBudgetName" />

    <Spinner
        android:id="@+id/spTimeInterval"
        android:layout_width="272dp"
        android:layout_height="32dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="38dp"
        android:entries="@array/timeIntervals"
        app:layout_constraintBottom_toTopOf="@+id/rvExpenses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAmountRemaining" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExpenses"
        android:layout_width="match_parent"
        android:layout_height="294dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddExpense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTimeInterval" />

    <Button
        android:id="@+id/btnAddExpense"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/addExpense"
        app:layout_constraintBottom_toTopOf="@+id/btnDoneViewBudget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvExpenses" />

    <Button
        android:id="@+id/btnDoneViewBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="298dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddExpense" />

    <Button
        android:id="@+id/btnDeleteBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="189dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDoneViewBudget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddExpense" />

</androidx.constraintlayout.widget.ConstraintLayout>