<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BudgetScreen">

    <Button
        android:id="@+id/btnAddBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/addBudget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtBudgets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="580dp"
        android:text="@string/budgets"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/rvBudgets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBudgets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="9dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="213dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="6dp"
        android:textSize="16sp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/rvBudgets"
        app:layout_constraintEnd_toStartOf="@+id/txtBudgets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="147dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:text="@string/remaining"
        app:layout_constraintBottom_toTopOf="@+id/rvBudgets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtBudgets"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003" />

</androidx.constraintlayout.widget.ConstraintLayout>